--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pfinalclub/asyncio",
+  "name": "yangweijie/asyncio",
   "description": "基于 PHP Fiber 和 Workerman 的异步 IO 扩展包，提供类似 Python asyncio 的功能",
   "type": "library",
   "keywords": ["async", "asyncio", "fiber", "coroutine", "workerman", "concurrent", "event-loop"],
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=8.1",
-    "workerman/workerman": "^4.1"
+    "workerman/workerman": "^4.1| ^5.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0"
